--- a/demo/package.json
+++ b/demo/package.json
@@ -15,8 +15,8 @@
 	"dependencies": {
 		"firebase": "^8.2.2",
 		"lamejs": "^1.2.0",
-		"vue": "^2.6.10",
-		"vue-advanced-chat": "0.8.6"
+		"vue": "^3.1.0",
+		"@vue/compat": "^3.1.0"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.0",
@@ -28,6 +28,8 @@
 		"eslint-plugin-vue": "^6.2.2",
 		"node-sass": "^4.14.1",
 		"sass-loader": "^10.1.1",
-		"vue-template-compiler": "^2.6.11"
+		"@vue/compiler-sfc": "^3.1.0",
+		"less": "^3.8.1",
+    	"less-loader": "^4.1.0"
 	}
 }
