--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"email": "antoindupontdev@gmail.com",
 		"name": "Antoine Dupont"
 	},
-	"types": "./types/vue-advanced-chat.common.d.ts",
+	"types": "./types/index.d.ts",
 	"keywords": [
 		"vue",
 		"vuejs",
@@ -32,7 +32,7 @@
 		"serve": "vue-cli-service serve",
 		"build": "npm run clean:lib && npm run build:lib && npm run build:wc",
 		"clean:lib": "rimraf dist",
-		"build:lib": "vue-cli-service build --target lib --no-clean --name vue-advanced-chat ./src/lib/index.js",
+		"build:lib": "vue-cli-service build --target lib --no-clean --name vue-advanced-chat ./src/lib/index.js && npm pack",
 		"build:wc": "vue-cli-service build --target wc --no-clean --name vue-advanced-chat ./src/lib/ChatWindow.vue",
 		"prepublish": "npm run lint && npm run build",
 		"publish-beta": "npm publish --tag beta",
@@ -51,6 +51,8 @@
 		"@vue/cli-plugin-eslint": "~4.5.0",
 		"@vue/cli-plugin-typescript": "~4.5.0",
 		"@vue/cli-service": "~4.5.0",
+		"@vue/compat": "^3.1.0",
+		"@vue/compiler-sfc": "^3.1.0",
 		"@vue/eslint-config-standard": "^4.0.0",
 		"@vue/eslint-config-typescript": "^5.0.2",
 		"@vue/test-utils": "^1.1.3",
@@ -64,16 +66,18 @@
 		"rimraf": "^2.7.1",
 		"sass-loader": "^10.1.1",
 		"typescript": "^4.0.5",
-		"vue": "^2.6.10",
-		"vue-jest": "^3.0.7",
-		"vue-template-compiler": "^2.6.11"
+		"vue": "^3.1.0",
+		"vue-jest": "^3.0.7"
 	},
 	"dependencies": {
+		"@vue/cli-service": "~4.5.0",
+		"@vue/compiler-sfc": "^3.1.0",
+		"core-js": "^3.15.2",
 		"lamejs": "^1.2.0",
 		"linkifyjs": "^2.1.9",
 		"v-click-outside": "^3.1.2",
-		"vue-emoji-picker": "^1.0.1",
-		"vue-infinite-loading": "https://github.com/antoine92190/vue-infinite-loading/tarball/master"
+		"vue-emoji-picker": "https://github.com/lik-alive/vue-emoji-picker-v3.git",
+		"vue-infinite-loading": "https://github.com/lik-alive/vue-infinite-loading-v3.git"
 	},
 	"optionalDependencies": {
 		"lamejs": "^1.2.0"
