--- a/demo/package.json
+++ b/demo/package.json
@@ -13,23 +13,21 @@
 		"latest": "npm i https://github.com/antoine92190/vue-advanced-chat/tarball/master"
 	},
 	"dependencies": {
+		"click-outside-vue3": "^4.0.1",
 		"firebase": "^8.2.2",
 		"lamejs": "^1.2.0",
-		"vue": "^3.1.0",
-		"@vue/compat": "^3.1.0"
+		"vue": "^3.1.0"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.0",
 		"@vue/cli-plugin-eslint": "~4.5.0",
 		"@vue/cli-service": "~4.5.0",
+		"@vue/compiler-sfc": "^3.1.0",
 		"@vue/eslint-config-standard": "^4.0.0",
 		"babel-eslint": "^10.0.3",
 		"eslint": "^6.7.2",
 		"eslint-plugin-vue": "^6.2.2",
 		"node-sass": "^4.14.1",
-		"sass-loader": "^10.1.1",
-		"@vue/compiler-sfc": "^3.1.0",
-		"less": "^3.8.1",
-    	"less-loader": "^4.1.0"
+		"sass-loader": "^10.1.1"
 	}
 }
