--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
 		"core-js": "^3.15.2",
 		"lamejs": "^1.2.0",
 		"linkifyjs": "^2.1.9",
-		"v-click-outside": "^3.1.2"
+		"click-outside-vue3": "^4.0.1"
 	},
 	"optionalDependencies": {
 		"lamejs": "^1.2.0"
