--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
 		"emitDeclarationOnly": true,
 		"outDir": "types"
 	},
-	"include": ["dist/**/*", "**/*"]
+	"include": ["dist/**/*", "**/*"],
+	"exclude": ["demo-laravel"]
 }
